--- a/requirements-develop.txt
+++ b/requirements-develop.txt
@@ -5,21 +5,22 @@
 -r ./requirements.txt
 
 # Documentation
-sphinx==1.5.*
-sphinx-autobuild==0.6.*
+Sphinx==2.4.*
+sphinx-autobuild==0.7.*
 
 # Interactive debugging
-pyramid_debugtoolbar==3.0.*
+pyramid_debugtoolbar==4.6.*
 
 # Unit tests
-pytest==3.*
-pytest-cov==2.*
-pytest-factoryboy==1.3.*
-factory_boy==2.*
-Faker==0.7.*
+pytest==5.4.*
+pytest-cov==2.8.*
+pytest-factoryboy==2.0.*
+pytest-profiling==1.7.*
+factory-boy==2.12.*
+Faker==4.0.*
 WebTest==2.0.*
-beautifulsoup4==4.5.*
-mock==2.0.*
+beautifulsoup4==4.8.*
+mock==4.0.*
 
 # Developer-managed accounts
 who_dev==0.0.*
