--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 alembic==1.4.*                              # Database structure migrations
 celery[redis]==5.2.*                        # Asynchronous queue
 cssmin==0.2.*                               # CSS asset compression
-gevent==1.4.*                               # Enables usage of SSE on gunicorn
+gevent==23.9.1                              # Enables usage of SSE on gunicorn
 gunicorn==20.0.*                            # WSGI server
 humanize==2.2.*                             # human readable units of measurement
 jsmin==2.2.*                                # Javascript asset copression
